# cli

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build  clean  distribute  install  mpw-cli-tests  mpw.bashrc  mpw.completion.bash  mpw_tests.xml  spectre-cli-tests  spectre.bashrc  spectre.completion.bash  spectre_tests.xml
scripts/: timetocrack
src/: bcrypt.c  mpw-bench.c  mpw-cli-util.c  mpw-cli-util.h  mpw-cli.c  mpw-tests-util.c  mpw-tests-util.h  mpw-tests.c  mpw-types.h  spectre-bench.c  spectre-cli-util.c  spectre-cli-util.h  spectre-cli.c  spectre-tests-util.c  spectre-tests-util.h  spectre-tests.c
